--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@giphy/js-brand": "^1.1.7",
+    "@giphy/js-components": "^3.0.0",
+    "@giphy/js-fetch-api": "^1.5.6",
+    "@giphy/js-types": "^2.0.2",
+    "bootstrap": "^4.4.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.5.4",
+    "throttle-debounce": "^2.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
